err/m7pub-pylibs.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/m7pub_pylibs'...
Compiling './lib/python3.5/site-packages/m7pub_pylibs/common.py'...
***   File "./lib/python3.5/site-packages/m7pub_pylibs/common.py", line 59
    raise (AttributeError), "Read-only attribute"
                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/m7pub_pylibs/dev'...
Listing './lib/python3.5/site-packages/m7pub_pylibs/jp'...
Compiling './lib/python3.5/site-packages/m7pub_pylibs/jp/mobemail.py'...
***   File "./lib/python3.5/site-packages/m7pub_pylibs/jp/mobemail.py", line 140
    print get_mobile_email_domains()
                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/m7pub_pylibs/utils'...
Compiling './lib/python3.5/site-packages/m7pub_pylibs/utils/files.py'...
***   File "./lib/python3.5/site-packages/m7pub_pylibs/utils/files.py", line 70
    print generate_random_filename()
                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/m7pub_pylibs/utils/helpers.py'...
***   File "./lib/python3.5/site-packages/m7pub_pylibs/utils/helpers.py", line 63
    print "Exception occurred 02: import_object(): %s" % (e)
                                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/m7pub_pylibs/utils/str.py'...
***   File "./lib/python3.5/site-packages/m7pub_pylibs/utils/str.py", line 64
    print is_alnum("bauAhfg345%")
                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/m7pub_pylibs-1.1.4.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
